errores en totales historicos ogm y oim

--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -277,10 +277,10 @@
                 </td>
                 {% endwith %}
                 <td class="text-right">{{ rubros|total_sum:'actualizado_ejecutado'|million|intcomma }}</td>
-                {% with sum_actualizado=rubros|total_sum:'actualizado_ejecutado' %}
+                {% with sum_actualizado=rubros|total_sum:'actualizado_asignado' %}
                     <td class="montos text-right">
                         {% if sum_actualizado %}
-                        {{ rubros|total_sum:'ejecutado'|div:sum_actualizado|mul:100|floatformat:1|intcomma}}
+                        {{ rubros|total_sum:'actualizado_ejecutado'|div:sum_actualizado|mul:100|floatformat:1|intcomma}}%
                         {% endif %}
                     </td>
                 {% endwith %}
@@ -299,7 +299,7 @@
                 {% with sum_actualizado=rubros|total_sum:'final_asignado' %}
                     <td class="montos text-right">
                         {% if sum_actualizado %}
-                        {{ rubros|total_sum:'final_ejecutado'|div:sum_actualizado|mul:100|floatformat:1|intcomma}}
+                        {{ rubros|total_sum:'final_ejecutado'|div:sum_actualizado|mul:100|floatformat:1|intcomma}}%
                         {% endif %}
                     </td>
                 {% endwith %}
@@ -337,7 +337,6 @@
                     {% if row.final_asignado %}
                         <td class="danger montos">{{ row.final_ejecutado|div:row.final_asignado|mul:100|floatformat:1|intcomma }}%</td>
                     {% endif %}
-                    <td class="text-right">{{ row.asignado|million }}</td>
                 </tr>
             {% endfor %}
             <tr class="success bold">
@@ -354,10 +353,10 @@
                 </td>
                 {% endwith %}
                 <td class="text-right">{{ rubrosp|total_sum:'actualizado_ejecutado'|million|intcomma }}</td>
-                {% with sum_actualizado=rubrosp|total_sum:'actualizado_ejecutado' %}
+                {% with sum_actualizado=rubrosp|total_sum:'actualizado_asignado' %}
                     <td class="montos text-right">
                         {% if sum_actualizado %}
-                        {{ rubrosp|total_sum:'ejecutado'|div:sum_actualizado|mul:100|floatformat:1|intcomma}}
+                        {{ rubrosp|total_sum:'actualizado_ejecutado'|div:sum_actualizado|mul:100|floatformat:1|intcomma}}%
                         {% endif %}
                     </td>
                 {% endwith %}
@@ -373,10 +372,10 @@
                 </td>
                 {% endwith %}
                 <td class="text-right">{{ rubrosp|total_sum:'final_ejecutado'|million|intcomma }}</td>
-                {% with sum_actualizado=rubrosp|total_sum:'final_ejecutado' %}
+                {% with sum_actualizado=rubrosp|total_sum:'final_asignado' %}
                     <td class="montos text-right">
                         {% if sum_actualizado %}
-                        {{ rubrosp|total_sum:'final_ejecutado'|div:sum_actualizado|mul:100|floatformat:1|intcomma}}
+                        {{ rubrosp|total_sum:'final_ejecutado'|div:sum_actualizado|mul:100|floatformat:1|intcomma}}%
                         {% endif %}
                     </td>
                 {% endwith %}
