--- a/core/templates/funcionamiento.html
+++ b/core/templates/funcionamiento.html
@@ -158,12 +158,12 @@
         </div>
     </div>
     <table class="table table-condensed">
-        <tr class="info"> <th>Tipo</th> <th>Inicial</th> <th>Ejecutado</th> <th> <a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Inicial" class="link-info">%</a></th></tr>
+        <tr class="info"> <th>Rubros de gastos</th> <th>Inicial</th> <th>Ejecutado</th> <th> <a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Inicial" class="link-info">%</a></th></tr>
     {% for row in rubros %}
     <tr>
         <td>{{ row.tipogasto__nombre }}</td>
-        <td class="text-right">{{ row.asignado|intcomma }}</td>
-        <td class="text-right">{{ row.ejecutado|intcomma }}</td>
+        <td class="text-right">{{ row.asignado|million|intcomma }}</td>
+        <td class="text-right">{{ row.ejecutado|million|intcomma }}</td>
         {% if row.asignado %}
             <td class="text-right">{{ row.ejecutado|div:row.asignado|mul:100|floatformat:1 }}%</td>
         {% endif %}
@@ -171,8 +171,8 @@
     {% endfor %}
     <tr class="success bold">
         <td>TOTAL</td>
-        <td class="text-right">{{ asignado|intcomma }}</td>
-        <td class="text-right">{{ ejecutado|intcomma }}</td>
+        <td class="text-right">{{ asignado|million|intcomma }}</td>
+        <td class="text-right">{{ ejecutado|million|intcomma }}</td>
         <td class="text-right">{{ ejecutado|div:asignado|mul:100|floatformat:1 }}%</td></tr>
     </table>
     <!-- /fin gftabla2 -->
@@ -201,27 +201,27 @@
             </div>
     </div>
     <table class="table table-condensed">
-        <tr class="info"> <th>Tipo</th> <th>Inicial</th> <th>Actualizado</th> <th>Modificación</th> <th>Ejecutado</th> <th> <a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Actualizado" class="link-info">%</a></th></tr>
+        <tr class="info"> <th>Rubros de gastos</th> <th>Inicial</th> <th>Actualizado</th> <th>Modificación</th> <th>Ejecutado</th> <th> <a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Actualizado" class="link-info">%</a></th></tr>
     {% for row in rubros %}
     <tr>
         <td class="pull-left">{{ row.tipogasto__nombre }}</td>
-        <td class="text-right">{{ row.asignado|intcomma }}</td>
-        <td>{{ row.actualizado|intcomma }}</td>
-        <td>{% if row.actualizado %}{{ row.actualizado|sub:row.asignado|intcomma }}{% else %}0{% endif %}</td>
-        <td class="text-right">{{ row.ejecutado|intcomma }}</td>
+        <td class="text-right">{{ row.asignado|million|intcomma }}</td>
+        <td class="text-right">{{ row.actualizado|million|intcomma }}</td>
+        <td class="text-right">{% if row.actualizado %}{{ row.actualizado|sub:row.asignado|million|intcomma }}{% else %}0{% endif %}</td>
+        <td class="text-right">{{ row.ejecutado|million|intcomma }}</td>
         {% if row.actualizado %}
-        <td class="text-right">{{ row.ejecutado|div:row.actualizado|mul:100|floatformat:1|intcomma }}%</td>
+        <td class="text-right">{{ row.ejecutado|div:row.actualizado|mul:100|floatformat:1|million|intcomma }}%</td>
         {% endif %}
     </tr>
     {% endfor %}
     <tr class="success bold">
         <td>TOTAL</td>
-        <td class="text-right">{{ rubros|total_sum:'asignado'|intcomma }}</td>
-        <td class="text-right">{{ rubros|total_sum:'actualizado'|intcomma }}</td>
+        <td class="text-right">{{ rubros|total_sum:'asignado'|million|intcomma }}</td>
+        <td class="text-right">{{ rubros|total_sum:'actualizado'|million|intcomma }}</td>
         {% with sum_asignado=rubros|total_sum:'asignado' %}
         <td class="text-right">
         {% if rubros|total_sum:'actualizado' %}
-            {{ rubros|total_sum:'actualizado'|sub:sum_asignado|intcomma }}
+            {{ rubros|total_sum:'actualizado'|sub:sum_asignado|million|intcomma }}
         {% else %}
             0
         {% endif %}
