--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -157,8 +157,8 @@
                                     <td>{{ row.subtipoingreso__nombre }}</td>                                    
                                     <td class="text-right">{{ row.inicial_asignado|million|intcomma }}</td>                                    
                                     <td class="text-right">{{ row.ejecutado|million|intcomma }}</td>                                   
-                                    {% if row.asignado %}                                                   
-                                        <td class="montos text-right">{{ row.ejecutado|div:row.asignado|mul:100|floatformat:1 }}%</td>
+                                    {% if row.inicial_asignado %}                                                   
+                                        <td class="montos text-right">{{ row.ejecutado|div:row.inicial_asignado|mul:100|floatformat:1 }}%</td>
                                     {% endif %}                                                             
                                 </tr>                                                                       
                                 {% endfor %}                                                                
@@ -222,8 +222,8 @@
                     {% endfor %}
                     <tr class="success">
                         <td colspan="2">TOTAL</td>
-                        <td class="text-right">{{ otros|total_sum:'asignado'|floatformat:2|intcomma }}</td>
-                        <td class="text-right">{{ otros|total_sum:'ejecutado'|floatformat:2|intcomma }}</td>
+                        <td class="text-right">{{ otros|total_sum:'asignado_percent'|floatformat:2|intcomma }}</td>
+                        <td class="text-right">{{ otros|total_sum:'ejecutado_percent'|floatformat:2|intcomma }}</td>
                         <td></td>
                     </tr>
                 </table>
@@ -255,7 +255,7 @@
         </div>
         <div class="col-md-11">
         <table class="table table-condensed">
-            <tr><td></td><td></td><td colspan="4" class="success text-center"><h4>Modifcación al __</h4></td><td colspan="4" class="danger"><h4>Modificación al</h4></td></tr>
+            <tr><td></td><td></td><td colspan="4" class="success text-center"><h4>Modifcación al {{ year_data.actualizado }}</h4></td><td colspan="4" class="danger"><h4>Modificación al {{ year_data.final }}</h4></td></tr>
             <tr class="info"> <th>Rubros de ingresos</th> <th>Inicial</th> 
                 <th>Actualizado</th> <th>Modificación</th> <th>Ejecutado</th> <th><a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Actualizado" class="link-info">%</a></th>
                 <th>Actualizado</th> <th>Modificación</th> <th>Ejecutado</th> <th><a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Actualizado" class="link-info">%</a></th>
@@ -333,7 +333,7 @@
         <h3>Modificacion al presupuesto municipal del ingreso de personal permanente</h3>
         <h4 class="text-info">Millones de córdobas corrientes</h4>
         <table class="table table-condensed">
-            <tr><td></td><td></td><td colspan="4" class="success text-center"><h4>Modifcación al __</h4></td><td colspan="4" class="danger"><h4>Modificación al</h4></td></tr>
+            <tr><td></td><td></td><td colspan="4" class="success text-center"><h4>Modifcación al {{ year_data.actualizado }}</h4></td><td colspan="4" class="danger"><h4>Modificación al {{ year_data.final }}</h4></td></tr>
             <tr class="info"> <th>Rubros de ingresos</th> <th>Inicial</th> 
                 <th>Actualizado</th> <th>Modificación</th> <th>Ejecutado</th> <th><a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Actualizado" class="link-info">%</a></th>
                 <th>Actualizado</th> <th>Modificación</th> <th>Ejecutado</th> <th><a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Actualizado" class="link-info">%</a></th>
